# pim

./: .gitignore  CONTRIBUTING  Cargo.toml  README  rx.desktop
config/: init.pim
scripts/: create-appimage  create-tarball  oklab.py  oklab_extrema.py  oklab_grays.py
src/: autocomplete.rs  brush.rs  cmd.rs  command.rs  data.rs  draw.rs  event.rs  flood.rs  gfx.rs  history.rs  io.rs  lib.rs  main.rs  message.rs  palette.rs  parser.rs  renderer.rs  script.rs  session.rs  settings.rs  view.rs
src/gfx/: color.rs  rect.rs
src/gfx/math/: algebra.rs
src/gl/: mod.rs
src/platform/: glfw.rs  mod.rs
src/view/: resource.rs
tests/: main.rs
