[package]
name = "pim"
version = "0.5.2"
description = "a modern, minimalist pixel editor"
license = "GPL-3.0-only"
repository = "https://github.com/lowagner/pim"
authors = ["Alexis Sellier <self@cloudhead.io>", "Lucas Wagner <lowagner@gmail.com>"]
edition = "2021"

[features]
default = ["glfw"]

[dependencies]
pico-args = "0.3.0"
png = { version = "0.16.6" }
gif = "0.10.3"
chrono = "0.4.19"
claim = "0.5.0"
glfw = { version = "0.41.0", optional = true }
raw-window-handle = { version = "0.3.3", optional = true }
snap = "0.2.5"
log = { version = "0.4.14", features = ["std"] }
directories = "2.0.2"
seahash = "4.0.0"
digest = "0.8.1"
nonempty = "0.1.4"
memoir = "0.2.1"
arrayvec = "0.5"
num-traits = "*"
luminance = "0.43.2"
luminance-gl = "0.16.1"
luminance-derive = "0.6.3"
gl = "0.14"
strum_macros = "0.25.0"
strum = "0.25.0"
libm = "0.2.8"

[dev-dependencies]
lazy_static = "1.3"
tempfile = "3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
